--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang ="en">
 <head>
+ <meta charset="UTF-8">
 <title></title>
 </head>
 <body>
+<form method="POST" autocomplete="on" action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
 
 
+<input type="submit" value="Sign Up Now!">
+<input type="reset" value="Clear data">
+</form>
 </body>
 </html>
