--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang ="en">
 <head>
  <meta charset="UTF-8">
-<title></title>
+<title>Lab-4</title>
 </head>
 <body>
 <form method="POST" autocomplete="on" action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
+<fieldset>
 
 
+
+
+</fieldset>
 <input type="submit" value="Sign Up Now!">
 <input type="reset" value="Clear data">
 </form>
