--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 <title>Lab-4</title>
 </head>
 <body>
+<h1>Volunteer form</h1>
 <form method="POST" autocomplete="on" action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
 <fieldset>
-
-
-
-
+<legend>My Info</legend>
+<div><label> </label></div>
+<div><label> </label></div>
+<div><label> </label></div>
+<div><label> </label></div>
 </fieldset>
 <input type="submit" value="Sign Up Now!">
 <input type="reset" value="Clear data">
