--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <form method="POST" autocomplete="on" action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
 <fieldset>
 <legend>My Info</legend>
-<div><label> </label></div>
-<div><label> </label></div>
-<div><label> </label></div>
-<div><label> </label></div>
+<div><label>First Name:<input type="text" name="first_name_field"></label></div>
+<div><label>Last Name:<input type="text" name="last_name_field"></label></div>
+<div><label>Phone Number:<input type="text" name="phone_field"></label></div>
+<div><label>Email Address:<input type="text" name="email_field"></label></div>
 </fieldset>
 <input type="submit" value="Sign Up Now!">
 <input type="reset" value="Clear data">
