--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Volunteer form</h1>
-<form method="POST" autocomplete="on" action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
+<form method="POST" action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
 <fieldset>
 <legend>My Info</legend>
 <div><label>First Name:<input type="text" name="first_name_field"></label></div>
