--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 <form method="POST" action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
 <fieldset>
 <legend>My Info</legend>
-<div><label>First Name:<input type="text" name="first_name_field"></label></div>
-<div><label>Last Name:<input type="text" name="last_name_field"></label></div>
-<div><label>Phone Number:<input type="text" name="phone_field"></label></div>
+<div><label>First Name:<input size="100" type="text" name="first_name_field"></label></div>
+<div><label>Last Name:<input size="100" type="text" name="last_name_field"></label></div>
+<div><label>Phone Number:<input size="100" type="text" name="phone_field"></label></div>
 <div><label>Email Address:<input type="text" name="email_field"></label></div>
+<div>Gender:</div>
+
+
+
+
+
+
 </fieldset>
-<input type="submit" value="Sign Up Now!">
-<input type="reset" value="Clear data">
+<input type="hidden" name="hidden_field" value="ajones73">
+<input type="submit"
 </form>
 </body>
 </html>
