--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang ="en">
 <head>
- <meta charset="UTF-8">
+  <meta charset="UTF-8">
 <title>Lab-4</title>
 </head>
 <body>
-<h1>Volunteer form</h1>
+  <h1>Volunteer form</h1>
 <form method="POST" action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php">
 <fieldset>
 <legend>My Info</legend>
@@ -14,10 +14,10 @@
 <div><label>Phone Number:<input size="100" type="text" name="phone_field"></label></div>
 <div><label>Email Address:<input type="text" name="email_field"></label></div>
 <div>Gender:</div>
-
-
-
-
+<div>
+<label>Male<input type="radio" name="gender_field" value="male"></label>
+<label>Female<input type="radio" name="gender_field" value="female"></label>
+</div>
 
 
 </fieldset>
