--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
 <label>Male<input type="radio" name="gender_field" value="male"></label>
 <label>Female<input type="radio" name="gender_field" value="female"></label>
 </div>
-
-
+<div>Age:</div>
+<option>under 18</option>
+<option>18-24</option>
+<option>25-34</option>
+<option>35-44</option>
+<option>45-54</option>
+<option>55-64</option>
+<option>65 and over</option>
 </fieldset>
 <input type="hidden" name="hidden_field" value="ajones73">
 <input type="submit"
