--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <label>Female<input type="radio" name="gender_field" value="female"></label>
 </div>
 <div>Age:</div>
+<select name="age_field">
 <option>under 18</option>
 <option>18-24</option>
 <option>25-34</option>
@@ -26,6 +27,19 @@
 <option>45-54</option>
 <option>55-64</option>
 <option>65 and over</option>
+</select>
+<fieldset>
+<legend>My Availability</legend>
+  <h3>Days Available>
+<div>
+<div><label>Sunday <input type="checkbox" name="available_field[]" value="sunday"></label> 
+<div><label>Monday <input type="checkbox" name="available_field[]" value="monday"></label> 
+<div><label>Tuesday <input type="checkbox" name="available_field[]" value="tuesday"></label> 
+<div><label>Wednesday <input type="checkbox" name="available_field[]" value="wednesday"></label> 
+<div><label>Thursday <input type="checkbox" name="available_field[]" value="thursday"></label> 
+<div><label>Friday <input type="checkbox" name="available_field[]" value="friday"></label> 
+<div><label>Saturday <input type="checkbox" name="available_field[]" value="saturday"></label> 
+
 </fieldset>
 <input type="hidden" name="hidden_field" value="ajones73">
 <input type="submit"
