--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 <div><label>Thursday <input type="checkbox" name="available_field[]" value="thursday"></label> 
 <div><label>Friday <input type="checkbox" name="available_field[]" value="friday"></label> 
 <div><label>Saturday <input type="checkbox" name="available_field[]" value="saturday"></label> 
-
+  <h3>Any Comments?</h3>
+  <textarea name="comments_field"></textarea>
+  </div>
 </fieldset>
 <input type="hidden" name="hidden_field" value="ajones73">
 <input type="submit"
