--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <option>55-64</option>
 <option>65 and over</option>
 </select>
+</fieldset>
 <fieldset>
 <legend>My Availability</legend>
   <h3>Days Available>
