--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 <legend>My Availability</legend>
   <h3>Days Available>
 <div>
-<div><label>Sunday <input type="checkbox" name="available_field[]" value="sunday"></label> 
-<div><label>Monday <input type="checkbox" name="available_field[]" value="monday"></label> 
-<div><label>Tuesday <input type="checkbox" name="available_field[]" value="tuesday"></label> 
-<div><label>Wednesday <input type="checkbox" name="available_field[]" value="wednesday"></label> 
-<div><label>Thursday <input type="checkbox" name="available_field[]" value="thursday"></label> 
-<div><label>Friday <input type="checkbox" name="available_field[]" value="friday"></label> 
-<div><label>Saturday <input type="checkbox" name="available_field[]" value="saturday"></label> 
+<div><label>Sunday <input type="checkbox" name="available_field[]" value="sunday"></label></div>
+<div><label>Monday <input type="checkbox" name="available_field[]" value="monday"></label></div>
+<div><label>Tuesday <input type="checkbox" name="available_field[]" value="tuesday"></label></div>
+<div><label>Wednesday <input type="checkbox" name="available_field[]" value="wednesday"></label></div>
+<div><label>Thursday <input type="checkbox" name="available_field[]" value="thursday"></label></div>
+<div><label>Friday <input type="checkbox" name="available_field[]" value="friday"></label></div>
+<div><label>Saturday <input type="checkbox" name="available_field[]" value="saturday"></label></div>
   <h3>Any Comments?</h3>
   <textarea name="comments_field"></textarea>
   </div>
