--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 </fieldset>
 <input type="hidden" name="hidden_field" value="ajones73">
-<input type="submit"
+<input type="submit">
 </form>
 </body>
 </html>
